--- a/less/components/call-tool.less
+++ b/less/components/call-tool.less
@@ -52,6 +52,25 @@
       user-select: none;
     }
   }
+  .social-container {
+    margin: 0.8rem 0;
+    i {
+      color: #42FEFD;
+      background: #000000;
+      border-radius: 50%;
+      height: 1.9rem;
+      width: 1.9rem;
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 1.1rem;
+      margin: 0 0.3rem;
+      cursor: pointer;
+    }
+  }
+  .try-again {
+    font-size: 0.8rem;
+  }
   .input-container {
     position: relative;
     display: inline-block;
