--- a/less/components/call-tool.less
+++ b/less/components/call-tool.less
@@ -52,6 +52,9 @@
       user-select: none;
     }
   }
+  .try-again {
+    font-size: 0.8rem;
+  }
   .input-container {
     position: relative;
     display: inline-block;
