--- a/less/shared.less
+++ b/less/shared.less
@@ -165,6 +165,10 @@ section {
   padding: 0 25px;
 }
 
+.share-progress-holder {
+  display: none;
+}
+
 @keyframes spin { /* CSS3 */
 	0%   { transform: rotate(0deg); }
 	100% { transform: rotate(360deg); }
