--- a/less/shared.less
+++ b/less/shared.less
@@ -143,6 +143,9 @@ button, .button-styling {
   text-align: center;
 
   &.submitting {
+    outline: none;
+    user-select: none;
+
     &::after {
       content: '';
       position: absolute;
