--- a/less/components/call-tool.less
+++ b/less/components/call-tool.less
@@ -22,8 +22,6 @@
     border: none;
   }
   .phone-number-input-container {
-    width: 100%;
-    max-width: 381px;
     display: inline-block;
     white-space: nowrap;
 
@@ -62,15 +60,19 @@
     border: 1px solid #000000;
     border-left: none;
     overflow: hidden;
+    min-width: 250px;
 
     input {
       outline: none;
       user-select: none;
+      position: absolute;
+      width: 100%;
+      left: 0;
+      top: 0;
+      height: 100%;
     }
   }
   .placeholder-container {
-    position: absolute;
-    left: 0;
     width: 100%;
     height: 100%;
     pointer-events: none;
