--- a/less/components/signup-form.less
+++ b/less/components/signup-form.less
@@ -38,7 +38,7 @@
       font-size: .87rem;
       color: #000000;
       border: none;
-      height: 40px;
+      height: 1.8rem;
       display: inline-block;
       padding-left: 12px;
       vertical-align: bottom;
