Better flag icons.

--- a/less/components/call-tool.less
+++ b/less/components/call-tool.less
@@ -13,6 +13,9 @@
     border: 1px solid #000000;
     padding: 0;
     width: 2.8rem;
+    option {
+      font-family: "Babel Stone Flags";
+    }
   }
   button {
     display: inline-block;
@@ -120,6 +123,8 @@
     padding-left: 0.4rem;
     display: inline-flex;
     align-items: center;
+    padding-top: 0.136rem;
+    font-family: "Babel Stone Flags";
   }
   .fa-caret-down {
     margin-left: 0.2rem;
