--- a/less/shared.less
+++ b/less/shared.less
@@ -56,7 +56,7 @@ a {
   font-weight: 300;
   font-style: normal;
   src: url('/assets/fonts/opensans-light.woff2') format('woff2'),
-       url('/media/fonts/opensans-light.woff') format('woff');
+       url('/assets/fonts/opensans-light.woff') format('woff');
 }
 
 @font-face {
@@ -64,7 +64,7 @@ a {
   font-weight: 400;
   font-style: normal;
   src: url('/assets/fonts/opensans-regular.woff2') format('woff2'),
-       url('/media/fonts/opensans-regular.woff') format('woff');
+       url('/assets/fonts/opensans-regular.woff') format('woff');
 }
 
 @font-face {
@@ -72,7 +72,7 @@ a {
   font-weight: 300;
   font-style: normal;
   src: url('/assets/fonts/ZillaSlab-Light.woff2') format('woff2'),
-       url('/media/fonts/ZillaSlab-Light.woff') format('woff');
+       url('/assets/fonts/ZillaSlab-Light.woff') format('woff');
 }
 
 @font-face {
@@ -80,7 +80,7 @@ a {
   font-weight: 400;
   font-style: normal;
   src: url('/assets/fonts/ZillaSlab-Regular.woff2') format('woff2'),
-       url('/media/fonts/ZillaSlab-Regular.woff') format('woff');
+       url('/assets/fonts/ZillaSlab-Regular.woff') format('woff');
 }
 
 @font-face {
@@ -88,7 +88,7 @@ a {
   font-weight: 400;
   font-style: italic;
   src: url('/assets/fonts/ZillaSlab-RegularItalic.woff2') format('woff2'),
-       url('/media/fonts/ZillaSlab-RegularItalic.woff') format('woff');
+       url('/assets/fonts/ZillaSlab-RegularItalic.woff') format('woff');
 }
 
 @font-face {
@@ -96,7 +96,14 @@ a {
   font-weight: 500;
   font-style: normal;
   src: url('/assets/fonts/ZillaSlab-Medium.woff2') format('woff2'),
-       url('/media/fonts/ZillaSlab-Medium.woff') format('woff');
+       url('/assets/fonts/ZillaSlab-Medium.woff') format('woff');
+}
+
+@font-face {
+  font-family: 'Babel Stone Flags';
+  font-weight: 400;
+  font-style: normal;
+  src: url('/assets/fonts/BabelStoneFlags.woff') format('woff');
 }
 
 .nav-offset {
