Fixing second round of links

--- a/less/pages/impact.less
+++ b/less/pages/impact.less
@@ -8,6 +8,9 @@
       flex-basis: 0;
       flex-grow: 1;
     }
+    a {
+      text-decoration: none;
+    }
   }
   h1 {
     text-align: center;
