Input placeholder for email signup.

--- a/less/components/signup-form.less
+++ b/less/components/signup-form.less
@@ -43,6 +43,7 @@
       padding-left: 12px;
       vertical-align: bottom;
       border: 2px solid #000000;
+      min-width: 14rem;
       &:invalid {
         box-shadow: none;
       }
