Fixing some wonky css.

--- a/less/components/signup-form.less
+++ b/less/components/signup-form.less
@@ -31,6 +31,16 @@
       .desktop-button {
         display: inline-block;
       }
+      h3 {
+        margin-top: 0;
+        margin-bottom: 0.5rem;
+      }
+      div {
+        margin: 0.5rem 0;
+        p {
+          margin-bottom: 0.8rem;
+        }
+      }
     }
     .email-input {
       font-family: Open Sans, sans-serif;
