Updated the impact CSS, margins, padding, and typography.

--- a/less/components/signup-form.less
+++ b/less/components/signup-form.less
@@ -7,6 +7,12 @@
       vertical-align: bottom;
       letter-spacing: -.007rem;
     }
+
+    h3 {
+      font-weight: 300;
+      font-size: 2rem;
+      font-family: Zilla Slab;
+    }
     .mobile-button {
       display: block;
     }
@@ -17,7 +23,7 @@
     label {
       font-family: Open Sans, sans-serif;
       font-weight: 300;
-      font-size: .7rem;
+      font-size: .65rem;
       color: #454545;
     }
     @media screen and (min-width: 931px) {
