--- a/less/shared.less
+++ b/less/shared.less
@@ -17,6 +17,12 @@ html {
   background: #FFFFFF;
 }
 
+.question {
+  font-size: 1.2rem;
+  font-family: 'Open Sans';
+  margin-top: 2rem;
+}
+
 p {
   color: #000000;
   font-size: 1.12rem;
@@ -39,7 +45,9 @@ h2 {
 
 h3 {
   font-weight: 300;
-  font-size: 2rem;
+  font-size: 1.2rem;
+  font-family: 'Open Sans';
+  font-weight: 400;
 }
 
 h4 {
