--- a/less/pages/impact.less
+++ b/less/pages/impact.less
@@ -7,6 +7,10 @@
     .impact-item-container {
       flex-basis: 0;
       flex-grow: 1;
+
+      h2 {
+        padding: 0 1rem 0 1rem;
+      }
     }
     a {
       text-decoration: none;
@@ -14,6 +18,9 @@
   }
   h1 {
     text-align: center;
+    font-size: 2rem;
+    font-weight: 500;
+    margin: 2em auto 1em auto;
   }
   .horizontal-rule {
     height: 1px;
