porting the donate cta modal

--- a/less/index.less
+++ b/less/index.less
@@ -1,5 +1,6 @@
 @import (less) "../node_modules/normalize.css/normalize.css";
 @import "components/index";
+@import "fragments/index";
 @import "pages/index";
 @import "shared";
 
