--- a/less/pages/home.less
+++ b/less/pages/home.less
@@ -21,3 +21,18 @@
     }
   }
 }
+
+
+/**
+ * Custom overrides for the donation modal.
+ */
+.home {
+  .modal {
+    overflow: hidden;
+    animation: backgroundFadeIn .15s ease-out;
+
+    @keyframes backgroundFadeIn {
+      0% { background: rgba(0,0,0,0) }
+    }
+  }
+}
