--- a/less/components/modal.less
+++ b/less/components/modal.less
@@ -1,10 +1,4 @@
-/**
- * We need to do some stylin' here
- */
-
-@primary_lightblue: #5381B9;
-@primary_darkblue: #005189;
-@primary_red: #F46060;
+// General modal styles
 
 .modal-overlay {
   position: fixed;
@@ -16,25 +10,39 @@
   z-index: 100;
   display: flex;
   align-items: center;
-}
 
-.modal-close {
-  position: absolute;
-  right: .5rem;
-  top: .5rem;
-  color: white;
-  cursor: pointer;
-  &:before{
-    font-size: 1.25em;
+  .modal {
+    z-index: 101;
+    margin: 1rem auto;
+    position: relative;
+    box-shadow: 0 0 8px rgba(0,0,0,.5);
+    max-height: 100vh;
+    overflow: hidden;
+    animation: backgroundFadeIn .15s ease-out;
+
+    @keyframes backgroundFadeIn {
+      0% { background: rgba(0,0,0,0) }
+    }
   }
-}
 
-.modal {
-  background-color: @primary_lightblue;
-  z-index:101;
-  padding: 1rem;
-  margin: 1rem auto;
-  position: relative;
-  box-shadow: 0 0 8px rgba(0,0,0,.5);
-  max-height: 100vh;
+  .modal-close {
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: 50px;
+    height: 50px;
+    cursor: pointer;
+    display: block;
+    opacity: 1;
+
+    i {
+      display: block;
+      text-align: center;
+      height: 18px;
+      width: 18px;
+      position: absolute;
+      left: ~"calc(50% - 9px)";
+      top: ~"calc(50% - 11px)";
+    }
+  }
 }
